--- a/templates/src/pages/index.astro
+++ b/templates/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 // TractStack Home Page
-import Layout from '../layouts/Layout.astro';
-import Counter from '../components/Counter';
+import Layout from '@/layouts/Layout.astro';
+import Counter from '@/components/Counter';
 
 // Read environment variables directly
 const goBackend = import.meta.env.PUBLIC_GO_BACKEND || 'http://localhost:8080';
