--- a/templates/src/pages/storykeep/logout.astro
+++ b/templates/src/pages/storykeep/logout.astro
@@ -1,5 +1,5 @@
 ---
-import { clearAuth } from '../../utils/auth';
+import { clearAuth } from '@/utils/auth';
 
 // Clear the authentication cookie
 clearAuth(Astro);
